Details
-
Bug
-
Status: Closed
-
P4: Low
-
Resolution: Done
-
Qt Creator 1.3.1
-
4773cdf7c07b378af2cb0c1447734d58870e3075
Description
I believe this is a problem with both Qt Creator and with qmake.
Symbian uses link-by-ordinal to link to DLLs. In order to maintain binary compatibility the position of each export needs to be kept the same every time a DLL is rebuilt. This is achieved using a .def file, that is created when you run abld freeze (actually there is a separate .def file created for winscw and eabi - in /bwins and /eabi folders respectively.
If you forget to freeze your API the link library (dso) isn't exported and you get a number of warnings (you can over-ride this using EXPORTUNFROZEN, but its a bad idea except in the early phases of development)
Anyway, there doesn't appear to be any make option to freeze the API (and this needs to be able to take a winscw or gcce/armv5 option). In addition, there is no Qt creator option to freeze the file. It would be good if Qt creator was smart enough to know that it was working on a Symbian DLL project and offer the option as a build step?
Attachments
Issue Links
- depends on
-
QTBUG-13769 No way to freeze libraries using qmake/make on symbian
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-772 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
49,1 | Ovi Publisher: Freeze libraries when creating package | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |