Ovi Publisher: Freeze libraries when creating package

Task-number: QTCREATORBUG-772
Change-Id: I925b7f27c1dc3aae14465472c6c32d48dd33d520
Reviewed-on: http://codereview.qt.nokia.com/49
Reviewed-by: Tobias Hunger <tobias.hunger@nokia.com>